Cleaned up comments & manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
-  "name": "Omnibox Example",
-  "description" : "To use, type 'omnix' plus a search term into the Omnibox.",
-  "version": "1.1",
+  "name": "SearchPin",
+  "description" : "To use, type '>' + TAB to enter a prefix. \
+                   Then press '>' + TAB then enter your search term. \
+                   To reset a prefix, type '>' + TAB + '-'.",
+  "version": "1.0",
   "background": {
     "scripts": ["background.js"]
   },
